# mdbee-task

./: .gitignore  Dockerfile  Dockerfile.test  Makefile  README  README.md  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
file_listener/: apps.py  consumers.py  enums.py  errors.py  handlers.py  sockets_routing.py  tests.py  views.py
file_listener/templates/file_listener/: index.html
file_receiver/: asgi.py  settings.py  urls.py  wsgi.py
