[tool.poetry]
name = "file-receiver"
version = "0.1.0"
description = ""
authors = ["Abdelrahmen Elbakary <abdelrahmenayman7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-types = "^0.19.1"
django-stubs-ext = "^5.1.0"
djangorestframework = "^3.15.2"
channels = {extras = ["daphne"], version = "^4.1.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
autopep8 = "^2.3.1"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
